--- a/car-app/src/app/app.component.html
+++ b/car-app/src/app/app.component.html
@@ -1,14 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <app-nav></app-nav>
-  <h1>
-    Do u know da {{ title }}?
-  </h1>
-  <app-home></app-home>
-  <app-make-trip></app-make-trip>
-  <app-my-profile></app-my-profile>
-  <app-my-trips></app-my-trips>
-  <app-register></app-register>
-  <app-search-trips></app-search-trips>
-  <app-this-trip></app-this-trip>
+<app-nav></app-nav>
+<div class ="container">
+  <router-outlet>
+    
+  </router-outlet>
 </div>
