--- a/car-app/src/app/components/nav/nav.component.html
+++ b/car-app/src/app/components/nav/nav.component.html
@@ -17,6 +17,9 @@
           <li [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
               <a class="nav-link"[routerLink]="['/register']">Register<span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="onLogoutClick()" href="#">Logout<span class="sr-only">(current)</span></a>
+        </li>
         </ul>
     </div>
   </nav>
