--- a/car-app/src/app/components/nav/nav.component.html
+++ b/car-app/src/app/components/nav/nav.component.html
@@ -11,13 +11,19 @@
         </li>
       </ul>
       <ul class=" nav navbar-nav ml-auto  ">
-          <li [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
+          <li *ngIf = "authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
+              <a class="nav-link" [routerLink]="['/dashboard']">Dashboard <span class="sr-only">(current)</span></a>
+          </li>
+          <li *ngIf = "authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
+              <a class="nav-link" [routerLink]="['/profile']">Profile <span class="sr-only">(current)</span></a>
+          </li>
+          <li *ngIf = "!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
               <a class="nav-link" [routerLink]="['/login']">Login <span class="sr-only">(current)</span></a>
           </li>
-          <li [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
+          <li *ngIf = "!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
               <a class="nav-link"[routerLink]="['/register']">Register<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf = "authService.loggedIn()">
             <a class="nav-link" (click)="onLogoutClick()" href="#">Logout<span class="sr-only">(current)</span></a>
         </li>
         </ul>
