--- a/car-app/src/app/components/nav/nav.component.html
+++ b/car-app/src/app/components/nav/nav.component.html
@@ -3,7 +3,6 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="nav navbar-nav  ">
         <li [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item ">
@@ -12,10 +11,10 @@
       </ul>
       <ul class=" nav navbar-nav ml-auto  ">
           <li *ngIf = "authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
-              <a class="nav-link" [routerLink]="['/dashboard']">Dashboard <span class="sr-only">(current)</span></a>
+              <a class="nav-link" [routerLink]="['/my-trips']">My trips <span class="sr-only">(current)</span></a>
           </li>
           <li *ngIf = "authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
-              <a class="nav-link" [routerLink]="['/profile']">Profile <span class="sr-only">(current)</span></a>
+              <a class="nav-link" [routerLink]="['/my-profile']">My profile <span class="sr-only">(current)</span></a>
           </li>
           <li *ngIf = "!authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact:true}" class="nav-item">
               <a class="nav-link" [routerLink]="['/login']">Login <span class="sr-only">(current)</span></a>
