--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -1,22 +1,66 @@
-<div class="jumbotron text-center">
-    <h1>MEAN Authentication App</h1>
-    <p class="lead">Welcome to our custom MEAN authentication application built from scratch</p>
-    <div>
-      <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-primary" [routerLink]="['/login']">Login</a>
+<div id="homeTitle" class="jumbotron text-center">
+  <h1>Welcome to CarMate</h1>
+  <p class="lead">Bringing travellers together...</p>
+</div>
+<div class="row">
+  <div class="col-md-8">
+      <div class="jumbotron text-center">
+        <h2>Where do you want to go?</h2>
+        <form>
+          <div id="tripForm">
+            <div id="tripDest" class="form-group">
+                <label>From destination</label>
+                <input type="text" class="form-control" placeholder="From">
+            </div>
+            <div id="tripDest" class="form-group">
+                <label>To destination</label>
+                <input type="text" class="form-control" placeholder="To">
+            </div>
+          </div>
+          <div id="tripForm">
+              <div id="tripDest" class="form-group">
+                  <label>Number of passengers</label>
+                  <input type="number" class="form-control" placeholder="0">
+              </div>
+              <div id="tripDest" class="form-group">
+                  <label>When?</label>
+                  <input type="date" class="form-control">
+              </div>
+            </div>
+          <button type="submit" class="btn btn-primary">Search</button><br>
+          <a [routerLink]="['/']">Do you want to make your own trip? Click here</a>
+        </form>
+      </div>
+  </div>
+  <div class="col-md-4">
+    <div class="jumbotron text-center">
+      <h2>Login</h2>
+      <form class="loginForm" (submit)="onLoginSubmit()">
+        <div class="form-group">
+          <label>Username</label>
+          <input type="text" class="form-control" [(ngModel)]="username" name="username">
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" [(ngModel)]="password" name="password">
+        </div>
+        <input type="submit" class="btn btn-primary" value="Login"><br>
+        <a [routerLink]="['/register']" >New around here? Register</a>
+      </form>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-4">
-      <h3>Express Backend</h3>
-      <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
-    </div>
-    <div class="col-md-4">
-      <h3>Angular-CLI</h3>
-      <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
-    </div>
-    <div class="col-md-4">
-      <h3>JWT Tokens</h3>
-      <p>Full featured authentication using JSON web tokens. Login and store user data</p>
-    </div>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Express Backend</h3>
+    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
   </div>
-  
+  <div class="col-md-4">
+    <h3>Angular-CLI</h3>
+    <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
+  </div>
+  <div class="col-md-4">
+    <h3>JWT Tokens</h3>
+    <p>Full featured authentication using JSON web tokens. Login and store user data</p>
+  </div>
+</div>
