--- a/car-app/src/app/components/login/login.component.html
+++ b/car-app/src/app/components/login/login.component.html
@@ -1,5 +1,4 @@
-<h2 class="page-header">Login</h2>
-<form (submit) = "onLoginSubmit()">
+<form class="loginForm" (submit)="onLoginSubmit()">
   <div class="form-group">
     <label>Username</label>
     <input type="text" class="form-control" [(ngModel)]="username" name="username">
