--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -32,7 +32,7 @@
         </form>
       </div>
   </div>
-  <div class="col-md-4">
+  <div *ngIf = "!authService.loggedIn()" class="col-md-4">
     <div class="jumbotron text-center">
       <h2>Login</h2>
       <form class="loginForm" (submit)="onLoginSubmit()">
