--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -2,8 +2,8 @@
   <h1>Welcome to CarMate</h1>
   <p class="lead">Bringing travellers together...</p>
 </div>
-<div class="row">
-  <div class="col-md-8">
+<div class="row" id="homeBody">
+  <div id="homeBodyTrip">
       <div class="jumbotron text-center">
         <h2>Where do you want to go?</h2>
         <form>
@@ -32,21 +32,10 @@
         </form>
       </div>
   </div>
-  <div class="col-md-4">
+  <div *ngIf="!authService.loggedIn()" id="homeBodyLogin">
     <div class="jumbotron text-center">
       <h2>Login</h2>
-      <form class="loginForm" (submit)="onLoginSubmit()">
-        <div class="form-group">
-          <label>Username</label>
-          <input type="text" class="form-control" [(ngModel)]="username" name="username">
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-control" [(ngModel)]="password" name="password">
-        </div>
-        <input type="submit" class="btn btn-primary" value="Login"><br>
-        <a [routerLink]="['/register']" >New around here? Register</a>
-      </form>
+      <app-login></app-login>
     </div>
   </div>
 </div>
