--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
               </div>
             </div>
           <button type="submit" class="btn btn-primary">Search</button><br>
-          <a [routerLink]="['/']">Do you want to make your own trip? Click here</a>
+          <a [routerLink]="['/make-trip']">Do you want to make your own trip? Click here</a>
         </form>
       </div>
   </div>
