changing input number values

--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
           <div id="tripForm">
               <div id="tripDest" class="form-group">
                   <label>Number of passengers</label>
-                  <input type="number" class="form-control" placeholder="0">
+                  <input type="number" min="0" max="10" value="0"  class="form-control" placeholder="0">
               </div>
               <div id="tripDest" class="form-group">
                   <label>When?</label>
