--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -10,17 +10,17 @@
           <div id="tripForm">
             <div id="tripDest" class="form-group">
                 <label>From destination</label>
-                <input type="text" class="form-control" placeholder="From">
+                <input type="search" class="form-control" placeholder="From">
             </div>
             <div id="tripDest" class="form-group">
                 <label>To destination</label>
-                <input type="text" class="form-control" placeholder="To">
+                <input type="search" class="form-control" placeholder="To">
             </div>
           </div>
           <div id="tripForm">
               <div id="tripDest" class="form-group">
                   <label>Number of passengers</label>
-                  <input type="number" min="0" max="10" value="0"  class="form-control" placeholder="0">
+                  <input type="number" min="1" max="9" value="1"  class="form-control" placeholder="1">
               </div>
               <div id="tripDest" class="form-group">
                   <label>When?</label>
