adding button to home screen for finding all users, button has no function yet

--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -53,3 +53,5 @@
     <p>Full featured authentication using JSON web tokens. Login and store user data</p>
   </div>
 </div>
+
+<button type="button" (click)="showUsers()">Show Users</button>
