--- a/car-app/src/app/app.component.html
+++ b/car-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 <div class ="container">
-  <flash-messages></flash-messages>
+  <flash-messages id="flashMessageComponent"></flash-messages>
   <router-outlet></router-outlet>
 </div>
