--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <div id="homeTitle" class="jumbotron text-center">
   <h1>Welcome to CarMate</h1>
   <p class="lead">Bringing travellers together...</p>
+  <button type="button" class="btn btn-info" (click)="showUsers()">Show Users</button>
 </div>
 <div class="row" id="homeBody">
   <div id="homeBodyTrip">
@@ -53,5 +54,3 @@
     <p>Full featured authentication using JSON web tokens. Login and store user data</p>
   </div>
 </div>
-
-<button type="button" (click)="showUsers()">Show Users</button>
