adding html for make-trip component and submit function in ts

--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -8,22 +8,22 @@
       <div class="jumbotron text-center">
         <h2>Where do you want to go?</h2>
         <form>
-          <div id="tripForm">
-            <div id="tripDest" class="form-group">
+          <div class="tripForm">
+            <div  class="form-group">
                 <label>From destination</label>
                 <input type="search" class="form-control" placeholder="From">
             </div>
-            <div id="tripDest" class="form-group">
+            <div  class="form-group">
                 <label>To destination</label>
                 <input type="search" class="form-control" placeholder="To">
             </div>
           </div>
-          <div id="tripForm">
-              <div id="tripDest" class="form-group">
+          <div class="tripForm">
+              <div class="form-group">
                   <label>Number of passengers</label>
                   <input type="number" min="1" max="9" value="1"  class="form-control" placeholder="1">
               </div>
-              <div id="tripDest" class="form-group">
+              <div class="form-group">
                   <label>When?</label>
                   <input type="date" class="form-control">
               </div>
