--- a/car-app/src/app/components/home/home.component.css
+++ b/car-app/src/app/components/home/home.component.css
@@ -2,13 +2,13 @@
     margin-top: 2%;
 }
 
-#tripForm {
+.tripForm {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
 }
 
-#tripDest {
+.form-group {
     width: 40%;
 }
 
