--- a/car-app/src/app/components/search-trips/search-trips.component.html
+++ b/car-app/src/app/components/search-trips/search-trips.component.html
@@ -1,3 +1,3 @@
-<p>
-  search-trips works!
-</p>
+<div class="jumbotron text-center">
+  <app-search-bar class="for-search"></app-search-bar>
+</div>
