adding changes to make-trip and uploading image

--- a/car-app/src/app/components/make-trip/make-trip.component.css
+++ b/car-app/src/app/components/make-trip/make-trip.component.css
@@ -3,3 +3,10 @@
     justify-content: space-around;
     flex-direction: row;
 }
+/* Makes "no file chosen" transparent. */
+input[type=file]{ 
+    color:transparent;
+}
+
+
+
