--- a/car-app/src/app/components/make-trip/make-trip.component.css
+++ b/car-app/src/app/components/make-trip/make-trip.component.css
@@ -7,6 +7,30 @@
 input[type=file]{ 
     color:transparent;
 }
+.progress {
+    height: 40px !important;
 
+}
+.progress-bar {
+    color: white;
+    font-weight: bold; 
+    font-size:24px;
+}
 
+ .search-trip-div {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+    
+.sub-form {
+   display: flex;
+   flex-direction: column;
+   width: 25%;
+}
+.card {
+    padding: 15px;
+}
 
