--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -1,20 +1,23 @@
 <div class="row" class="jumbotron text-center" id="makeTripBody">
   <div>
-    <legend>Tell me about your trip</legend>
+
+
     <form (submit)="onClickSubmit()">
-      <fieldset>
-        <div class="form-group row">
-          <div>
+      
+      <div class="card border-primary mb-3" style="max-width: 100%;">
+        <legend>Basics</legend>
+        <div class="search-trip-div">
+          <div class="sub-group">
             <label>From destination</label>
             <input type="search" class="form-control" placeholder="From" [(ngModel)]="fromDest" name="fromDest">
           </div>
-          <div>
+          <div class="sub-group" >
             <label>To destination</label>
             <input type="search" class="form-control" placeholder="To" [(ngModel)]="toDest" name="toDest">
           </div>
         </div>
-        <div class="form-group row">
-          <div>
+        <div class="search-trip-div">
+          <div class="sub-group">
             <label>Maximum passengers</label>
             <select class="form-control" placeholder="1" [(ngModel)]="maxPassengers" name="maxPassengers">
               <option>1</option>
@@ -30,44 +33,50 @@
             </select>
 
           </div>
-          <div>
+          <div class="sub-group">
             <label>When?</label>
             <input type="date" class="form-control" [(ngModel)]="date" name="date">
           </div>
         </div>
+      </div>
+
+
+      <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date">
+        <legend>Car specs</legend>
         <div>
-          <br>
-          <legend>Functionalities</legend>
-          <input type="checkbox" name="functionality" value="Animals" [(ngModel)]="animals" name="animals"> I allow passengers to bring small animals
-          <br>
-          <input type="checkbox" name="functionality" value="ChildSeat" [(ngModel)]="childSeat" name="childSeat"> I have a childSeat
-          <br>
-          <input type="checkbox" name="functionality" value="BaggageSpace" [(ngModel)]="baggageSpace" name="baggageSpace"> I have room for a suitcase
-          <br>
-          <br>
-        </div>
-        <div>
-          <legend>Describe your car for your passengers</legend>
           <div>
-            <div>
-              <label>Car Model</label>
-              <input type="text" [(ngModel)]="carModel" name="carModel">
-            </div>
-            <div>
-              <label>What does your car run on?</label>
-              <br>
-              <input type="radio" name="carType" value="electrical" [(ngModel)]="carFuel" name="carFuel">Electrical
-              <br>
-              <input type="radio" name="carType" value="petrolDiesel" [(ngModel)]="carFuel" name="carFuel">Petrol/diesel
-              <br>
-              <input type="radio" name="carType" value="hybrid" [(ngModel)]="carFuel" name="carFuel">Hybrid
-              <br>
-              <input type="radio" name="carType" value="other" [(ngModel)]="carFuel" name="carFuel"> Other
-            </div>
+            <label>Car Model</label>
+            <input type="text" [(ngModel)]="carModel" name="carModel">
+          </div>
+          <div>
+            <label>What does your car run on?</label>
+            <br>
+            <input type="radio" name="carType" value="electrical" [(ngModel)]="carFuel" name="carFuel">Electrical
+            <br>
+            <input type="radio" name="carType" value="petrolDiesel" [(ngModel)]="carFuel" name="carFuel">Petrol/diesel
+            <br>
+            <input type="radio" name="carType" value="hybrid" [(ngModel)]="carFuel" name="carFuel">Hybrid
+            <br>
+            <input type="radio" name="carType" value="other" [(ngModel)]="carFuel" name="carFuel"> Other
+          </div>
+          <div>
+            <br>
+            <label>Features</label>
+            <input type="checkbox" name="functionality" value="Animals" [(ngModel)]="animals" name="animals"> I allow passengers to bring small animals
+            <br>
+            <input type="checkbox" name="functionality" value="ChildSeat" [(ngModel)]="childSeat" name="childSeat"> I have a childSeat
+            <br>
+            <input type="checkbox" name="functionality" value="BaggageSpace" [(ngModel)]="baggageSpace" name="baggageSpace"> I have room for a suitcase
+            <br>
           </div>
         </div>
+      </div>
+
+
+      <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date&&carModel&&carFuel">
         <div>
-          <legend>Why don't you add a picture of yourself? This is optional and you can also choose your profile picture.</legend>
+          <legend>Extras</legend>
+          <label>Why don't you add a picture of yourself? This is optional and you can also choose your profile picture.</label>
 
 
           <div class="form-group row">
@@ -80,34 +89,49 @@
           </div>
         </div>
 
+
         <div>
           <div *ngIf="checked()">
             <input type="file" name="pictureFile" accept="image/*" (change)="onFileChange($event)">
           </div>
         </div>
-        <div *ngIf="fileExists()&&checked()">
+
+        <div *ngIf="pictureFile&&checked()">
           <label>You have uploaded this picture</label>
           <img [src]="pictureFile" alt="Picture of yourself">
         </div>
+
+
         <div>
-          <div>
 
-            <legend>Anything else you would like to tell your carmates?</legend>
+          <legend>Anything else you would like to tell your carmates?</legend>
 
 
-            <textarea class="form-control" id="exampleTextarea" rows="3" type="text" [(ngModel)]="otherInfo" name="otherInfo"></textarea>
-          </div>
+          <textarea class="form-control" id="exampleTextarea" rows="3" type="text" [(ngModel)]="otherInfo" name="otherInfo"></textarea>
         </div>
 
+      </div>
 
-        <div class="mainButtons">
-          <button type="submit" class="btn btn-primary" name="upload" value="Upload">Upload</button>
-          <br>
-          <button type="button" class="btn btn-primary" (click)="onClickSave()" name="save" value="Save">Save</button>
-          <br>
-          <input type="reset" value="Reset the form">
-        </div>
-      </fieldset>
+
+      <div class="mainButtons">
+        <button type="submit" class="btn btn-primary" name="upload" value="Upload">Upload</button>
+        <br>
+        <button type="button" class="btn btn-primary" (click)="onClickSave()" name="save" value="Save">Save</button>
+        <br>
+        <input type="reset" value="Reset the form">
+      </div>
+
+
     </form>
+    <div class="progress">
+
+      <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0"
+        aria-valuemax="99" style="width: 33%" *ngIf="toDest&&fromDest&&maxPassengers&&date">Basics</div>
+      <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0"
+        aria-valuemax="99" style="width: 33%" *ngIf="carModel&&carFuel">Car specs</div>
+      <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="34" aria-valuemin="0"
+        aria-valuemax="99" style="width: 34%" *ngIf="(pictureFile&&checked())||(!checked()&&pictureChoice)">Extras</div>
+
+    </div>
   </div>
 </div>
