--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -5,7 +5,8 @@
     <form (submit)="onClickSubmit()">
       
       <div class="card border-primary mb-3" style="max-width: 100%;">
-        <legend>Basics</legend>
+        <div class="card-header ">
+          <legend >Basics</legend></div>
         <div class="search-trip-div">
           <div class="sub-group">
             <label>From destination</label>
@@ -42,7 +43,7 @@
 
 
       <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date">
-        <legend>Car specs</legend>
+        <div class="card-header"><legend>Car specs</legend></div>
         <div>
           <div>
             <label>Car Model</label>
@@ -75,11 +76,11 @@
 
       <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date&&carModel&&carFuel">
         <div>
-          <legend>Extras</legend>
+          <div class="card-header"><legend>Extras</legend></div>
           <label>Why don't you add a picture of yourself? This is optional and you can also choose your profile picture.</label>
 
 
-          <div class="form-group row">
+          <div class="sub-group">
             <input type="radio" name="pictureChoice" value="uploadFile" [(ngModel)]="pictureChoice" name="pictureChoice"> Upload File
             <br>
             <input type="radio" name="pictureChoice" value="profilePicture" [(ngModel)]="pictureChoice" name="pictureChoice"> I want to use my profile picture
@@ -91,12 +92,12 @@
 
 
         <div>
-          <div *ngIf="checked()">
+          <div *ngIf="pictureChoice=='uploadFile'">
             <input type="file" name="pictureFile" accept="image/*" (change)="onFileChange($event)">
           </div>
         </div>
 
-        <div *ngIf="pictureFile&&checked()">
+        <div *ngIf="pictureFile!=undefined&&pictureChoice=='uploadFile'">
           <label>You have uploaded this picture</label>
           <img [src]="pictureFile" alt="Picture of yourself">
         </div>
@@ -114,7 +115,7 @@
 
 
       <div class="mainButtons">
-        <button type="submit" class="btn btn-primary" name="upload" value="Upload">Upload</button>
+        <button type="submit" class="btn btn-primary" [ngClass]="{'buttonDisabled': !validateFields() }" name="upload" value="Upload">Upload</button>
         <br>
         <button type="button" class="btn btn-primary" (click)="onClickSave()" name="save" value="Save">Save</button>
         <br>
@@ -130,7 +131,7 @@
       <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0"
         aria-valuemax="99" style="width: 33%" *ngIf="carModel&&carFuel">Car specs</div>
       <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="34" aria-valuemin="0"
-        aria-valuemax="99" style="width: 34%" *ngIf="(pictureFile&&checked())||(!checked()&&pictureChoice)">Extras</div>
+        aria-valuemax="99" style="width: 34%" *ngIf="(pictureFile)||(pictureChoice!=undefined&&pictureChoice!='uploadFile')">Extras</div>
 
     </div>
   </div>
