--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -1,18 +1,19 @@
-<div class="row" class="jumbotron text-center" id="makeTripBody">
-  <div>
 
+<ng-template clickOutside></ng-template>
+<div class="row" class="jumbotron text-center" id="makeTripBody" >
+  <div >
+    <form (submit)="onClickSubmit()"   >
 
-    <form (submit)="onClickSubmit()">
-      
-      <div class="card border-primary mb-3" style="max-width: 100%;" id = "basics">
+      <div class="card border-primary mb-3" style="max-width: 100%;" id="basics" >
         <div class="card-header ">
-          <legend >Basics</legend></div>
+          <legend>Basics</legend>
+        </div>
         <div class="search-trip-div">
           <div class="sub-group">
             <label>From destination</label>
             <input type="search" class="form-control" placeholder="From" [(ngModel)]="fromDest" name="fromDest">
           </div>
-          <div class="sub-group" >
+          <div class="sub-group">
             <label>To destination</label>
             <input type="search" class="form-control" placeholder="To" [(ngModel)]="toDest" name="toDest">
           </div>
@@ -34,34 +35,25 @@
             </select>
 
           </div>
-          <div class="sub-group">
+          <div class="sub-group" >
             <label>When?</label>
             <input type="date" class="form-control" [(ngModel)]="date" name="date">
           </div>
         </div>
-        <a [routerLink]="['/make-trip']" fragment="car-specs" (click)="onAnchorClick()" class = "sub-form">Car specs</a>
 
       </div>
 
 
       <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date" id="car-specs">
-        <div class="card-header"><legend>Car specs</legend></div>
+        <div class="card-header">
+          <legend>Car specs</legend>
+        </div>
         <div>
           <div>
             <label>Car Model</label>
             <input type="text" [(ngModel)]="carModel" name="carModel">
           </div>
-          <div>
-            <label>What does your car run on?</label>
-            <br>
-            <input type="radio" name="carType" value="electrical" [(ngModel)]="carFuel" name="carFuel">Electrical
-            <br>
-            <input type="radio" name="carType" value="petrolDiesel" [(ngModel)]="carFuel" name="carFuel">Petrol/diesel
-            <br>
-            <input type="radio" name="carType" value="hybrid" [(ngModel)]="carFuel" name="carFuel">Hybrid
-            <br>
-            <input type="radio" name="carType" value="other" [(ngModel)]="carFuel" name="carFuel"> Other
-          </div>
+
           <div>
             <br>
             <label>Features</label>
@@ -72,15 +64,28 @@
             <input type="checkbox" name="functionality" value="BaggageSpace" [(ngModel)]="baggageSpace" name="baggageSpace"> I have room for a suitcase
             <br>
           </div>
+          <div >
+            <label>What does your car run on?</label>
+            <br>
+            <input type="radio" name="carType" value="electrical" [(ngModel)]="carFuel" name="carFuel">Electrical
+            <br>
+            <input type="radio" name="carType" value="petrolDiesel" [(ngModel)]="carFuel" name="carFuel">Petrol/diesel
+            <br>
+            <input type="radio" name="carType" value="hybrid" [(ngModel)]="carFuel" name="carFuel">Hybrid
+            <br>
+            <input type="radio" name="carType" value="other" [(ngModel)]="carFuel" name="carFuel"> Other
+          </div>
         </div>
-        <a [routerLink]="['/make-trip']" fragment="extras" (click)="onAnchorClick()" class = "sub-form">Extras</a>
 
       </div>
 
 
-      <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date&&carModel&&carFuel" id = "extras">
+      <div class="card border-primary mb-3" style="max-width: 100%;" *ngIf="toDest&&fromDest&&maxPassengers&&date&&carModel&&carFuel"
+        id="extras">
         <div>
-          <div class="card-header"><legend>Extras</legend></div>
+          <div class="card-header">
+            <legend>Extras</legend>
+          </div>
           <label>Why don't you add a picture of yourself? This is optional and you can also choose your profile picture.</label>
 
 
@@ -141,5 +146,6 @@
   </div>
 </div>
 <div class="card border-primary mb-3" style="max-width: 100%;">
-<a [routerLink]="['/make-trip']" fragment="basics" (click)="onAnchorClick()" class = "sub-form">Basics</a>
+  <a [routerLink]="['/make-trip']" fragment="basics" (click)="onAnchorClick()" class="sub-form">Basics</a>
 </div>
+
