adding code for hinding map on home page

--- a/car-app/src/app/components/search-bar/search-bar.component.css
+++ b/car-app/src/app/components/search-bar/search-bar.component.css
@@ -22,7 +22,11 @@
 
 :host-context(.for-home) .btn {
     width: 40%;
- }
+}
+
+:host-context(.for-home) #map {
+    display: none;
+}
 
 /* CSS FOR FIND-A-TRIP-PAGE */
 
