--- a/car-app/src/app/components/search-bar/search-bar.component.html
+++ b/car-app/src/app/components/search-bar/search-bar.component.html
@@ -8,9 +8,21 @@
       <label>To destination</label>
       <input type="text" class="form-control" placeholder="To" #searchTo>
     </div>
-    <div class="sub-form">
+    <div class="sub-group">
       <label>Number of passengers</label>
-      <input type="number" min="1" max="9" value="1"  class="form-control" >
+      <select class="form-control" placeholder="1" [(ngModel)]="maxPassengers" name="maxPassengers">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+        <option>6</option>
+        <option>7</option>
+        <option>8</option>
+        <option>9</option>
+
+      </select>
+
     </div>
     <div class="sub-form">
       <label>When?</label>
