--- a/car-app/src/app/components/search-trips/search-trips.component.html
+++ b/car-app/src/app/components/search-trips/search-trips.component.html
@@ -1,3 +1,4 @@
 <div class="jumbotron text-center">
-  <app-search-bar class="for-search"></app-search-bar>
+  <app-search-bar class="for-search" (inputChanged)="onInputChanged($event)"></app-search-bar>
 </div>
+<app-map *ngIf="textSet()" [searchForm]="searchFormP"></app-map>
