adding fixed navbar, better looking flashmessages and myprofile jumbotron

--- a/car-app/src/styles.css
+++ b/car-app/src/styles.css
@@ -7,4 +7,9 @@
 }
 #flashMessageComponent, .flash-messages, .flash-message:last-child {
     display: block;
+    z-index: -10;
+}
+
+body {
+    padding-top: 0.1px;
 }
