--- a/car-app/src/app/components/search-bar/search-bar.component.html
+++ b/car-app/src/app/components/search-bar/search-bar.component.html
@@ -2,7 +2,7 @@
   <div id="search-trip-div">
     <div class="sub-form">
       <label>From destination</label>
-      <input type="text" class="form-control" placeholder="From" #searchFrom>
+      <input type="text" (blur)="fromBtn()" class="form-control" placeholder="From" #searchFrom>
     </div>
     <div class="sub-form">
       <label>To destination</label>
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div>
-    <input type="submit" class="btn btn-primary" value="Search"><br>
+    <input type="submit" class="btn btn-primary" value="Search" [routerLink]="['/search-trip', fromParameter:searchFromV]"><br>
     <a id="make-trip-link" [routerLink]="['/make-trip']">
       Do you want to make your own trip? Click here
     </a>
