--- a/car-app/src/app/components/search-bar/search-bar.component.html
+++ b/car-app/src/app/components/search-bar/search-bar.component.html
@@ -6,11 +6,11 @@
     </div>
     <div class="sub-form">
       <label>To destination</label>
-      <input type="text" class="form-control" placeholder="To" #searchTo>
+      <input type="text" (blur)="fromBtn()" class="form-control" placeholder="To" [value]="searchToInput" #searchTo>
     </div>
     <div class="sub-group">
       <label>Number of passengers</label>
-      <select class="form-control" placeholder="1" [(ngModel)]="maxPassengers" name="maxPassengers">
+      <select class="form-control" placeholder="1" [(ngModel)]="searchPassengersV" name="searchPassengersV" [value]="searchPassengersInput">
         <option>1</option>
         <option>2</option>
         <option>3</option>
@@ -20,17 +20,16 @@
         <option>7</option>
         <option>8</option>
         <option>9</option>
-
       </select>
 
     </div>
     <div class="sub-form">
       <label>When?</label>
-      <input type="date" class="form-control">
+      <input type="date" class="form-control" [(ngModel)]="searchDateV" name="searchDateV" [value]="searchDateInput">
     </div>
   </div>
   <div>
-    <input type="submit" class="btn btn-primary" value="Search" [routerLink]="['/search-trip', {fromParameter:searchFromV}]"><br>
+    <input type="submit" class="btn btn-primary" value="Search" [routerLink]="['/search-trip', {fromParameter:searchFromV, toParameter:searchToV, passengerParameter:searchPassengersV, dateParameter:searchDateV }]"><br>
     <a id="make-trip-link" [routerLink]="['/make-trip']">
       Do you want to make your own trip? Click here
     </a>
