--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -6,7 +6,7 @@
     -->
       <fieldset><app-search-bar></app-search-bar></fieldset>
 
-      <!--
+      <!-- Commented out for later use
       <div class="card border-primary mb-3" style="max-width: 100%;" id="car-specs">
         <div class="card-header">
           <legend>Car specs</legend>
