--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -76,22 +76,22 @@
         <label>What does your car run on?</label>
         <div class="form-check">
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" value="petrolDiesel" id="carFuel1" checked="" #carfuel>Petrol/diesel
+            <input class="form-check-input" name="carfield" type="radio" value="petrolDiesel" id="carFuel1" checked="" #carfuel>Petrol/diesel
           </label>
         </div>
         <div class="form-check">
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" value="electrical" id="carFuel2" #carfuel>Electrical
+            <input class="form-check-input" name="carfield" type="radio" value="electrical" id="carFuel2" #carfuel>Electrical
           </label>
         </div>
         <div class="form-check disabled">
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" value="hybrid" id="carFuel3" #carfuel>Hybrid
+            <input class="form-check-input" name="carfield" type="radio" value="hybrid" id="carFuel3" #carfuel>Hybrid
           </label>
         </div>
         <div class="form-check disabled">
           <label class="form-check-label">
-            <input class="form-check-input" type="radio" value="other" id="carFuel4" #carfuel>Other
+            <input class="form-check-input" name="carfield" type="radio" value="other" id="carFuel4" #carfuel>Other
           </label>
         </div>
       </div>
