adding userid and parameters of trip to database.

--- a/car-app/src/app/components/make-trip/make-trip.component.html
+++ b/car-app/src/app/components/make-trip/make-trip.component.html
@@ -18,7 +18,7 @@
       <a class="nav-link" data-toggle="tab" href="#extras">EXTRAS</a>
     </li>
   </ul>
-  <form id="myTabContent" class="tab-content" (submit)="onClickSubmit(from.value, to.value)">
+  <form id="myTabContent" class="tab-content" (submit)="onClickSubmit(from.value, to.value, passengers.value, date.value)">
     <fieldset class="tab-pane fade active show" id="tripInfo">
       <div class="form-group">
         <label>From destination</label>
