--- a/car-app/src/app/components/search-trips/search-trips.component.css
+++ b/car-app/src/app/components/search-trips/search-trips.component.css
@@ -1,3 +1,25 @@
+#resultsBody {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    flex-wrap: wrap;
+}
+
+#resultBodyTrip {
+    margin-right: 1%;
+    flex: 1;
+}
+
+#filterBodyTrip {
+    margin-right: 1%;
+    flex: 0.5;
+}
+
+#mapBodyTrip {
+    margin-right: 1%;
+    flex: 1.5;
+}
+
 .jumbotron {
     margin-top: 2%;
 }
