Results component can now use data from search component to search in database and display the correct trips.

--- a/car-app/src/app/components/search-trips/search-trips.component.html
+++ b/car-app/src/app/components/search-trips/search-trips.component.html
@@ -9,6 +9,7 @@
     </div>
     <div id="resultBodyTrip" class="jumbotron text-center">
         <h2>Results</h2>
+        <app-results [searchForm]="searchFormP"></app-results>
     </div>
     <div id="mapBodyTrip" class="jumbotron text-center">
         <app-map [searchForm]="searchFormP"></app-map>
