Adding findtrips where you are driver

--- a/car-app/src/app/components/my-trips/my-trips.component.css
+++ b/car-app/src/app/components/my-trips/my-trips.component.css
@@ -1,3 +1,10 @@
 #myTrips {
     margin-top: 2%;
 }
+
+#resultsBody {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    flex-wrap: wrap;
+}
