--- a/car-app/src/app/components/my-trips/my-trips.component.html
+++ b/car-app/src/app/components/my-trips/my-trips.component.html
@@ -1,11 +1,35 @@
 <div id="myTrips" class="jumbotron">
   <h2 class="page-header">My trips</h2>
   <p>Here are your trips!</p>
-  <ul>
-    <li *ngFor="let trip of myTrips">
-      From: {{trip.from}}, to: {{trip.to}}
-    </li>
-  </ul>
+  <div id="resultsBody">
+    <div>
+      <h2>Passenger</h2>
+      <div class="aResult" *ngFor="let result of myTripsPassenger">
+        <div class="card border-success mb-3">
+          <div class="card-header">
+            <h5 class="card-title">{{result.from}} -> {{result.to}}</h5>
+          </div>
+          <div class="card-body">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h2>Driving</h2>
+
+      <div class="aResult" *ngFor="let result of myTripsDriver">
+        <div class="card border-warning mb-3">
+          <div class="card-header">
+            <h5 class="card-title">{{result.from}} -> {{result.to}}</h5>
+          </div>
+          <div class="card-body">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <a class="btn btn-primary" [routerLink]="['/my-profile']">My profile
     <span class="sr-only">(current)</span>
   </a>
