Adding delete function for my trips.

--- a/car-app/src/app/components/my-trips/my-trips.component.html
+++ b/car-app/src/app/components/my-trips/my-trips.component.html
@@ -24,7 +24,7 @@
             <h5 class="card-title">{{result.from}} -> {{result.to}}</h5>
           </div>
           <div class="card-body">
-              
+              <button (click)="deleteTrip(result._id)">Delete</button>
           </div>
         </div>
       </div>
