Adding deleteProfile() to myProfileComponent

--- a/car-app/src/app/components/my-profile/my-profile.component.html
+++ b/car-app/src/app/components/my-profile/my-profile.component.html
@@ -9,5 +9,8 @@
     <li class = "list-group-item">
       Email: {{user.email}}
     </li>
+    <li>
+      <button (click)="deleteUserProfile()">Delete this profile</button>
+    </li>
   </ul>
 </div>
