Adding messages-service, components and mongoose model

--- a/car-app/src/app/components/my-profile/my-profile.component.html
+++ b/car-app/src/app/components/my-profile/my-profile.component.html
@@ -9,6 +9,7 @@
     <li class = "list-group-item">
       Email: {{user.email}}
     </li>
+    <app-messages></app-messages>
     <li>
       <button (click)="deleteUserProfile()">Delete this profile</button>
     </li>
