Adding view and add messages

--- a/car-app/src/app/components/messages/messages.component.html
+++ b/car-app/src/app/components/messages/messages.component.html
@@ -1,3 +1,11 @@
-<p>
-  Here are your messages!
-</p>
+<div class="aMessage" *ngFor="let message of messagesReceived">
+  <div class="card border-success mb-3">
+    <div class="card-header">
+      <h5 class="card-title">Message:</h5>
+      <h6>date: {{message.date | date: 'full'}}</h6>
+      <p>{{message.messageText}}</p>
+
+
+    </div>
+  </div>
+</div>
