Adding message popup with modal, ability to send message to driver

--- a/car-app/src/app/components/messages/messages.component.html
+++ b/car-app/src/app/components/messages/messages.component.html
@@ -2,10 +2,8 @@
   <div class="card border-success mb-3">
     <div class="card-header">
       <h5 class="card-title">Message:</h5>
-      <h6>date: {{message.date | date: 'full'}}</h6>
+      <h6>date: {{message.date | date: 'medium'}}</h6>
       <p>{{message.messageText}}</p>
-
-
     </div>
   </div>
 </div>
