fetching notifications and displaying in home component.

--- a/car-app/src/app/components/notifications/notifications.component.html
+++ b/car-app/src/app/components/notifications/notifications.component.html
@@ -1,3 +1,10 @@
-<p>
-  notifications works!
-</p>
+<div class= "jumbotron">
+  <div *ngFor="let notification of myNotifications">
+    <ul>
+    <div *ngIf="notification.type == 'madeTrip'">
+      <li>You have made a trip! Date: {{notification.date | date: 'medium'}}</li>
+    </div>
+    </ul>
+    
+  </div>
+</div>
