--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -18,8 +18,7 @@
 </div>
 <div class="row">
   <div class="col-md-4">
-    <h3>Express Backend</h3>
-    <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
+    <app-notifications></app-notifications>>
   </div>
   <div class="col-md-4">
     <h3>Angular-CLI</h3>
