Adding chat, still no scroll working.

--- a/car-app/src/app/components/home/home.component.html
+++ b/car-app/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
   <div class="col-md-4">
-    <app-notifications></app-notifications>>
+    <app-notifications></app-notifications>
   </div>
   <div class="col-md-4">
     <h3>Angular-CLI</h3>
