--- a/car-app/src/app/components/message/message.component.css
+++ b/car-app/src/app/components/message/message.component.css
@@ -7,6 +7,7 @@
     align-items:stretch;
     background-color: #eee;
     box-shadow: 0 3px 6px rgba(0,0,0,0.26), 0 3px 6px rgba(0,0,0,0.23);
+    margin: 2em;
 }
 
 .isOwnMessageContainer{
