--- a/car-app/src/app/components/navbar-chat/navbar-chat.component.html
+++ b/car-app/src/app/components/navbar-chat/navbar-chat.component.html
@@ -3,7 +3,7 @@
     <div id="heading"><a routerLink="/">basechat</a></div>
   <div class="links">
     <span>
-      <a *ngIf="!(user|async)?.uid" href="#" (click)="login()">Login</a>
+      <a *ngIf="!(user|async)?.uid" href="login-chat" (click)="login()">Login</a>
     </span>
     <span>
       <a *ngIf="!(user|async)?.uid" routerLink="/signup-form-chat">Sign Up</a>
@@ -12,7 +12,7 @@
       <span id="userEmail" *ngIf="(user|async)?.uid">Hello, {{userEmail}}</span>
     </span>
     <span>
-      <a *ngIf="(user|async)?.uid" href="#" (click)="logout()">Logout</a>
+      <a *ngIf="(user|async)?.uid" href="login-chat" (click)="logout()">Logout</a>
     </span>
   </div>
 </div>
