making search-bar prettier

--- a/car-app/src/app/components/search-bar/search-bar.component.html
+++ b/car-app/src/app/components/search-bar/search-bar.component.html
@@ -8,7 +8,7 @@
       <label>To destination</label>
       <input type="text" (blur)="fromBtn()" class="form-control" placeholder="To" [value]="searchToInput" #searchTo>
     </div>
-    <div class="sub-group">
+    <div class="sub-form">
       <label>Number of passengers</label>
       <select class="form-control" placeholder="1" [(ngModel)]="searchPassengersV" name="searchPassengersV" [value]="searchPassengersInput">
         <option>1</option>
