making delete profile button pretty

--- a/car-app/src/app/components/my-profile/my-profile.component.html
+++ b/car-app/src/app/components/my-profile/my-profile.component.html
@@ -10,8 +10,6 @@
       Email: {{user.email}}
     </li>
     <app-messages></app-messages>
-    <li>
-      <button (click)="deleteUserProfile()">Delete this profile</button>
-    </li>
   </ul>
+  <br><br><br><br><br><br><br><button class="btn btn-danger" (click)="deleteUserProfile()">Delete this profile</button>
 </div>
